--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trivia</title>
     <link rel="stylesheet" href="trivia.css">
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&family=Sigmar&display=swap" rel="stylesheet">
 </head>
 <body>
-    <button id="gen">Generate Question</button>
-    <div class="main">
-        <div id="ques"></div>
-        <div id="ans">
-            <button class="answerButton" id="ans1"></button>
-            <button class="answerButton" id="ans2"></button>
-            <button class="answerButton" id="ans3"></button>
-            <button class="answerButton" id="ans4"></button>
+    <div id="holder">
+        <button id="gen">Generate Question</button>
+        <div class="main">
+            <div id="ques"></div>
+            <div id="ans">
+                <button class="answerButton" id="ans1"></button>
+                <button class="answerButton" id="ans2"></button>
+                <button class="answerButton" id="ans3"></button>
+                <button class="answerButton" id="ans4"></button>
+            </div>
+            <div id="result"></div>
         </div>
-        <div id="result"></div>
     </div>
 <script src="trivia.js"></script>
 </body>
